Ignoreing vscode settings. Minor spelling mistakes in blogposts. Fixed icon spacing on index page

--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -70,6 +70,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  padding: 0.5em 0em;
 }
 
 a {
